--- a/_main.scss
+++ b/_main.scss
@@ -1,45 +1,135 @@
 main {
     .recommendation {
-        margin: 0 auto;
-        padding-top: 207px;
-        background: linear-gradient(180deg, #010A20 0%, rgba(1, 10, 32, 0) 100%);
-
+        width: 100%;
 
         &_container {
-            &--box {
-                width: 480px;
+            width: 100%;
+            margin: 0 auto;
+            display: flex;
+            flex-direction: column;
 
-                &--title {
-                    font-family: DM Sans;
-                    font-weight: 700;
-                    font-size: 42px;
-                    line-height: 50px;
-                    letter-spacing: 0px;
-                    color: #FFFFFF;
+            &--top {
+                padding-top: 207px;
+                padding-bottom: 192px;
+                background:
+                    linear-gradient(0deg, #010A20 0%, rgba(1, 10, 32, 0) 100%),
+                    url(./img/explore-mountains-bg.png) center top no-repeat,
+                    #010A20;
+
+                &--block {
+                    margin: 0 auto;
+                    display: flex;
+                    align-items: center;
+                    gap: 130px;
+                    width: 100%;
+                    max-width: 1240px;
+                    padding-left: 71px;
+
+                    &--box {
+                        width: 100%;
+                        max-width: 438px;
+
+                        &--title {
+                            font-family: DM Sans;
+                            font-weight: 700;
+                            font-size: 42px;
+                            line-height: 50px;
+                            letter-spacing: 0px;
+                            color: #FFFFFF;
+                            margin-bottom: 15px;
+                        }
+
+                        &--text {
+                            font-family: DM Sans;
+                            font-weight: 400;
+                            font-size: 18px;
+                            line-height: 28px;
+                            letter-spacing: 1%;
+                            color: #E0E0E0;
+                            width: 407px;
+                            text-align: left;
+                            margin-bottom: 32px;
+                        }
+
+                        &--btn {
+                            width: 180px;
+                            font-family: DM Sans;
+                            font-weight: 700;
+                            font-size: 18px;
+                            line-height: 150%;
+                            letter-spacing: 0%;
+                            text-align: center;
+                            color: #FFFFFF;
+                            background-color: #DD2242;
+                            border: none;
+                            border-radius: 32px;
+                            padding: 16px 40px 16px 40px;
+                            cursor: pointer;
+                        }
+                    }
                 }
+            }
 
-                &--text {
-                    font-family: DM Sans;
-                    font-weight: 400;
-                    font-size: 18px;
-                    line-height: 28px;
-                    letter-spacing: 1%;
-                    color: #E0E0E0;
-                }
+            &--bottom {
+                padding-bottom: 302px;
+                background:
+                    linear-gradient(-180deg, #010A20 0%, rgba(1, 10, 32, 0) 100%),
+                    url(./img/explore-palms-bg.png) center no-repeat,
+                    #010A20;
 
-                &--btn {
-                    width: 180px;
-                    font-family: DM Sans;
-                    font-weight: 700;
-                    font-size: 18px;
-                    line-height: 150%;
-                    letter-spacing: 0%;
-                    text-align: center;
-                    color: #FFFFFF;
-                    background-color: #DD2242;
-                    border: none;
-                    border-radius: 32px;
-                    padding: 16px 40px 16px 40px;
+                &--block {
+                    margin: 0 auto;
+                    display: flex;
+                    align-items: center;
+                    gap: 130px;
+                    width: 100%;
+                    max-width: 1240px;
+                    padding-left: 71px;
+
+
+                    &--box {
+                        width: 100%;
+                        max-width: 438px;
+                        margin-left: 45px;
+
+                        &--title {
+                            font-family: DM Sans;
+                            font-weight: 700;
+                            font-size: 42px;
+                            line-height: 50px;
+                            letter-spacing: 0px;
+                            color: #FFFFFF;
+                            margin-bottom: 15px;
+                        }
+
+                        &--text {
+                            font-family: DM Sans;
+                            font-weight: 400;
+                            font-size: 18px;
+                            line-height: 28px;
+                            letter-spacing: 1%;
+                            color: #E0E0E0;
+                            width: 407px;
+                            text-align: left;
+                            margin-bottom: 32px;
+                        }
+
+                        &--btn {
+                            width: 180px;
+                            font-family: DM Sans;
+                            font-weight: 700;
+                            font-size: 18px;
+                            line-height: 150%;
+                            letter-spacing: 0%;
+                            text-align: center;
+                            color: #FFFFFF;
+                            background-color: #DD2242;
+                            border: none;
+                            border-radius: 32px;
+                            padding: 16px 40px 16px 40px;
+                            cursor: pointer;
+                        }
+                    }
                 }
             }
         }
