--- a/style.css
+++ b/style.css
@@ -229,11 +229,6 @@
 }
 .header_bottom--container--info--block--box3 {
   width: 210px;
-  grid-column: 1/-1;
-  justify-self: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 .header_bottom--container--info--block--box3--number {
   font-family: Roboto;
@@ -260,7 +255,6 @@
   font-size: 18px;
   line-height: 28px;
   letter-spacing: 0.5px;
-  text-align: center;
 }
 
 @media (max-width: 1850px) {
@@ -403,30 +397,53 @@
   }
 }
 main .recommendation {
+  width: 100%;
+}
+main .recommendation_container {
+  width: 100%;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+}
+main .recommendation_container--top {
   padding-top: 207px;
-  background: linear-gradient(180deg, #010A20 0%, rgba(1, 10, 32, 0) 100%);
+  padding-bottom: 192px;
+  background: linear-gradient(0deg, #010A20 0%, rgba(1, 10, 32, 0) 100%), url(./img/explore-mountains-bg.png) center top no-repeat, #010A20;
 }
-main .recommendation_container--box {
-  width: 480px;
+main .recommendation_container--top--block {
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  gap: 130px;
+  width: 100%;
+  max-width: 1240px;
+  padding-left: 71px;
 }
-main .recommendation_container--box--title {
+main .recommendation_container--top--block--box {
+  width: 100%;
+  max-width: 438px;
+}
+main .recommendation_container--top--block--box--title {
   font-family: DM Sans;
   font-weight: 700;
   font-size: 42px;
   line-height: 50px;
   letter-spacing: 0px;
   color: #FFFFFF;
+  margin-bottom: 15px;
 }
-main .recommendation_container--box--text {
+main .recommendation_container--top--block--box--text {
   font-family: DM Sans;
   font-weight: 400;
   font-size: 18px;
   line-height: 28px;
   letter-spacing: 1%;
   color: #E0E0E0;
+  width: 407px;
+  text-align: left;
+  margin-bottom: 32px;
 }
-main .recommendation_container--box--btn {
+main .recommendation_container--top--block--box--btn {
   width: 180px;
   font-family: DM Sans;
   font-weight: 700;
@@ -439,4 +456,58 @@ main .recommendation_container--box--btn {
   border: none;
   border-radius: 32px;
   padding: 16px 40px 16px 40px;
+  cursor: pointer;
+}
+main .recommendation_container--bottom {
+  padding-bottom: 302px;
+  background: linear-gradient(-180deg, #010A20 0%, rgba(1, 10, 32, 0) 100%), url(./img/explore-palms-bg.png) center no-repeat, #010A20;
+}
+main .recommendation_container--bottom--block {
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  gap: 130px;
+  width: 100%;
+  max-width: 1240px;
+  padding-left: 71px;
+}
+main .recommendation_container--bottom--block--box {
+  width: 100%;
+  max-width: 438px;
+  margin-left: 45px;
+}
+main .recommendation_container--bottom--block--box--title {
+  font-family: DM Sans;
+  font-weight: 700;
+  font-size: 42px;
+  line-height: 50px;
+  letter-spacing: 0px;
+  color: #FFFFFF;
+  margin-bottom: 15px;
+}
+main .recommendation_container--bottom--block--box--text {
+  font-family: DM Sans;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 28px;
+  letter-spacing: 1%;
+  color: #E0E0E0;
+  width: 407px;
+  text-align: left;
+  margin-bottom: 32px;
+}
+main .recommendation_container--bottom--block--box--btn {
+  width: 180px;
+  font-family: DM Sans;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 150%;
+  letter-spacing: 0%;
+  text-align: center;
+  color: #FFFFFF;
+  background-color: #DD2242;
+  border: none;
+  border-radius: 32px;
+  padding: 16px 40px 16px 40px;
+  cursor: pointer;
 }/*# sourceMappingURL=style.css.map */
