--- a/_addaptive.scss
+++ b/_addaptive.scss
@@ -30,6 +30,35 @@
                                 text-align: center;
                             }
                         }
+
+                        &--box3 {
+                            display: flex;
+                            flex-direction: column;
+                            align-items: center;
+
+                            &--p {
+                                text-align: center;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media(max-width:1480px) {
+    main {
+        .recommendation {
+            &--container {
+                width: 100%;
+
+                &--bottom {
+                    &--block {
+                        &--img {
+                            width: 450px;
+                            height: auto;
+                        }
                     }
                 }
             }
@@ -115,12 +144,14 @@
 
             &--info {
                 padding: 0;
+
                 img {
                     width: 150px;
                     height: auto;
                 }
             }
         }
+
         &_bottom {
             &--container {
                 padding-top: 0;
