--- a/_main.scss
+++ b/_main.scss
@@ -232,6 +232,8 @@ main {
         }
 
         &_numbers {
+            background-color: #010A20;
+            opacity: 90%;
             padding-top: 201px;
             padding-bottom: 244px;
 
@@ -259,8 +261,134 @@ main {
                 color: #E0E0E0;
                 margin-bottom: 39px;
             }
-            &--container{
-                
+
+            &--container {
+                width: 100%;
+                max-width: 1275px;
+                margin: 0 auto;
+                display: flex;
+                justify-content: space-between;
+                align-items: baseline;
+
+                &--box {
+                    width: 340px;
+
+                    &--title {
+                        font-family: DM Sans;
+                        font-weight: 700;
+                        font-size: 42.14px;
+                        line-height: 49.16px;
+                        letter-spacing: 0.39px;
+                        text-align: center;
+                        color: #DD2242;
+                    }
+
+                    &--text {
+                        font-family: DM Sans;
+                        font-weight: 400;
+                        font-size: 18px;
+                        line-height: 28px;
+                        letter-spacing: 0.5px;
+                        text-align: center;
+                        color: #E0E0E0;
+                    }
+                }
+
+                &--box {
+                    width: 340px;
+
+                    &--2 {
+                        width: 377px;
+                    }
+
+                    &--title {
+                        font-family: DM Sans;
+                        font-weight: 700;
+                        font-size: 42.14px;
+                        line-height: 49.16px;
+                        letter-spacing: 0.39px;
+                        text-align: center;
+                        color: #DD2242;
+                        margin-bottom: 18px;
+                    }
+
+                    &--text {
+                        font-family: DM Sans;
+                        font-weight: 400;
+                        font-size: 18px;
+                        line-height: 28px;
+                        letter-spacing: 0.5px;
+                        text-align: center;
+                        color: #E0E0E0;
+                    }
+                }
+            }
+        }
+    }
+
+    .hills {
+        width: 100%;
+        max-width: 1920px;
+        padding-top: 249px;
+        padding-bottom: 256px;
+        background-image:
+            url("./img/hills-bg-left-explore.svg"),
+            url("./img/hills-bg-right-explore.svg");
+
+        background-position:
+            left center,
+            right bottom;
+
+        background-repeat:
+            no-repeat,
+            no-repeat;
+
+        background-size:
+            auto;
+            
+
+        &_container {
+            margin: 0 auto;
+            width: 614px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            &--title {
+                font-family: DM Sans;
+                font-weight: 700;
+                font-size: 42px;
+                line-height: 50px;
+                letter-spacing: 0px;
+                text-align: center;
+                color: #010A20;
+                margin-bottom: 32px;
+            }
+
+            &--text {
+                font-family: DM Sans;
+                font-weight: 400;
+                font-size: 18px;
+                line-height: 28px;
+                letter-spacing: 0.5px;
+                text-align: center;
+                color: #6F7787;
+                width: 470px;
+                margin-bottom: 36px;
+            }
+
+            &--btn {
+                color: #FFFFFF;
+                font-family: DM Sans;
+                font-weight: 700;
+                font-size: 18px;
+                line-height: 150%;
+                letter-spacing: 0%;
+                text-align: center;
+                background-color: #DD2242;
+                padding: 18px 56px;
+                border: none;
+                cursor: pointer;
+                border-radius: 122px;
             }
         }
     }
