--- a/_main.scss
+++ b/_main.scss
@@ -345,7 +345,7 @@ main {
 
         background-size:
             auto;
-            
+
 
         &_container {
             margin: 0 auto;
@@ -353,6 +353,7 @@ main {
             display: flex;
             flex-direction: column;
             align-items: center;
+
             &--title {
                 font-family: DM Sans;
                 font-weight: 700;
@@ -389,6 +390,145 @@ main {
                 border: none;
                 cursor: pointer;
                 border-radius: 122px;
+            }
+        }
+    }
+
+    .videos {
+        width: 100%;
+        max-width: 1920px;
+        background:
+            linear-gradient(215.79deg,
+                rgba(0, 0, 0, 0.31) 90%,
+                rgba(0, 0, 0, 0.29) 30.2%),
+            url(./img/videos-bg-explore.jpg);
+        background-size: cover;
+        background-repeat: no-repeat;
+        padding-top: 141px;
+        padding-bottom: 210px;
+
+        &_container {
+            width: 1285px;
+            margin: 0 auto;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            &--title {
+                font-family: DM Sans;
+                font-weight: 700;
+                font-size: 42px;
+                line-height: 50px;
+                letter-spacing: 0px;
+                text-align: center;
+                color: #FFFFFF;
+                width: 1056px;
+                margin-bottom: 67px;
+            }
+
+            &--img--market {
+                position: relative;
+                cursor: pointer;
+                transition: box-shadow 0.25s ease;
+
+                svg {
+                    position: absolute;
+                    left: 480px;
+                    top: 250px;
+                }
+            }
+
+            &--img--market:hover {
+                box-shadow:
+                    0 10px 20px rgba(0, 0, 0, 0.45),
+                    0 26px 50px rgba(0, 0, 0, 0.6);
+
+                img {
+                    filter: brightness(0.90);
+                }
+
+                svg {
+                    rect {
+                        fill: #DD2242;
+                        transition-duration: 0.3s;
+                    }
+                }
+            }
+
+            &--bottom {
+                display: flex;
+                gap: 75px;
+                align-items: center;
+                margin-top: 125px;
+                padding-left: 82px;
+
+                &--box {
+                    display: flex;
+                    gap: 42px;
+                    align-items: center;
+
+                    &--img {
+                        position: relative;
+
+                        svg {
+                            position: absolute;
+                            left: 103px;
+                            top: 60px;
+                        }
+                    }
+
+                    &--img:hover {
+                        box-shadow:
+                            0 10px 20px rgba(0, 0, 0, 0.45),
+                            0 26px 50px rgba(0, 0, 0, 0.6);
+
+                        img {
+                            filter: brightness(0.90);
+                        }
+
+                        svg {
+                            path {
+                                fill: #DD2242;
+                                transition-duration: 0.3s;
+                            }
+                        }
+                    }
+
+                    &--info {
+                        h4 {
+                            font-family: DM Sans;
+                            font-weight: 700;
+                            font-size: 18px;
+                            line-height: 150%;
+                            letter-spacing: 0%;
+                            color: #FFFFFF;
+                            margin-bottom: 15px;
+                        }
+
+                        &--text {
+                            font-family: DM Sans;
+                            font-weight: 400;
+                            font-size: 18px;
+                            line-height: 28px;
+                            letter-spacing: 0.5px;
+                            color: #FFFFFF;
+                            opacity: 70%;
+                            width: 334px;
+                            text-align: left;
+                        }
+
+                        &--text2 {
+                            font-family: DM Sans;
+                            font-weight: 400;
+                            font-size: 18px;
+                            line-height: 28px;
+                            letter-spacing: 0.5px;
+                            color: #FFFFFF;
+                            opacity: 70%;
+                            width: 320px;
+                        }
+                    }
+                }
             }
         }
     }
