--- a/_main.scss
+++ b/_main.scss
@@ -21,14 +21,14 @@ main {
                     margin: 0 auto;
                     display: flex;
                     align-items: center;
-                    gap: 130px;
+                    justify-content: space-between;
                     width: 100%;
-                    max-width: 1240px;
-                    padding-left: 71px;
+                    max-width: 1260px;
 
                     &--img {
                         width: 100%;
                         height: auto;
+                        max-width: 630px;
                     }
 
                     &--box {
@@ -53,7 +53,6 @@ main {
                             letter-spacing: 1%;
                             color: #E0E0E0;
                             width: 407px;
-                            text-align: left;
                             margin-bottom: 32px;
                         }
 
@@ -88,14 +87,14 @@ main {
                     margin: 0 auto;
                     display: flex;
                     align-items: center;
-                    gap: 180px;
+                    justify-content: space-between;
                     width: 100%;
-                    max-width: 1240px;
-                    padding-left: 71px;
+                    max-width: 1260px;
 
                     &--img {
                         width: 100%;
                         height: auto;
+                        max-width: 630px;
                     }
 
                     &--box {
@@ -121,7 +120,6 @@ main {
                             letter-spacing: 1%;
                             color: #E0E0E0;
                             width: 407px;
-                            text-align: left;
                             margin-bottom: 32px;
                         }
 
@@ -527,6 +525,86 @@ main {
                             opacity: 70%;
                             width: 320px;
                         }
+                    }
+                }
+            }
+        }
+    }
+
+    .gallery {
+        width: 100%;
+        max-width: 1920px;
+        padding-top: 177px;
+        padding-bottom: 229px;
+
+        &_container {
+            width: 1170px;
+            margin: 0 auto;
+
+            &--title {
+                font-family: DM Sans;
+                font-weight: 700;
+                font-size: 60px;
+                line-height: 150%;
+                letter-spacing: 0%;
+                text-align: center;
+                vertical-align: middle;
+                color: #010A20;
+            }
+
+            &--text {
+                font-family: DM Sans;
+                font-weight: 400;
+                font-size: 18px;
+                line-height: 28px;
+                letter-spacing: 1%;
+                text-align: center;
+                color: #6F7787;
+                width: 511px;
+                margin: 0 auto;
+                margin-top: 41px;
+                margin-bottom: 71px;
+            }
+
+            &--box {
+                display: grid;
+                grid-template-columns: repeat(3, 1fr);
+                grid-template-rows: repeat(4, 1fr);
+                gap: 8px;
+                width: 1170px;
+                margin: 0 auto;
+
+                &--img {
+                    &--1 {
+                        grid-row: span 3 / span 3;
+                    }
+
+                    &--2 {
+                        grid-column-start: 1;
+                        grid-row-start: 4;
+                    }
+
+                    &--2 {
+                        grid-column-start: 2;
+                        grid-row-start: 1;
+                    }
+
+                    &--3 {
+                        grid-row: span 3 / span 3;
+                        grid-column-start: 2;
+                        grid-row-start: 2;
+                    }
+
+                    &--4 {
+                        grid-row: span 2 / span 2;
+                        grid-column-start: 3;
+                        grid-row-start: 1;
+                    }
+
+                    &--5 {
+                        grid-row: span 2 / span 2;
+                        grid-column-start: 3;
+                        grid-row-start: 3;
                     }
                 }
             }
