--- a/style.css
+++ b/style.css
@@ -293,12 +293,41 @@
   }
 }
 @media (max-width: 1480px) {
-  main .recommendation--container {
-    width: 100%;
+  main .recommendation_container--top--block {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
-  main .recommendation--container--bottom--block--img {
-    width: 450px;
-    height: auto;
+  main .recommendation_container--top--block--box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  main .recommendation_container--top--block--box--title {
+    text-align: center;
+    margin-top: 30px;
+  }
+  main .recommendation_container--top--block--box--text {
+    text-align: center;
+    margin-top: 30px;
+  }
+  main .recommendation_container--bottom--block {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+  main .recommendation_container--bottom--block--box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  main .recommendation_container--bottom--block--box--title {
+    text-align: center;
+    margin-top: 30px;
+  }
+  main .recommendation_container--bottom--block--box--text {
+    text-align: center;
+    margin-top: 30px;
   }
 }
 @media (max-width: 1300px) {
@@ -432,14 +461,14 @@ main .recommendation_container--top--block {
   margin: 0 auto;
   display: flex;
   align-items: center;
-  gap: 130px;
+  justify-content: space-between;
   width: 100%;
-  max-width: 1240px;
-  padding-left: 71px;
+  max-width: 1260px;
 }
 main .recommendation_container--top--block--img {
   width: 100%;
   height: auto;
+  max-width: 630px;
 }
 main .recommendation_container--top--block--box {
   width: 100%;
@@ -462,7 +491,6 @@ main .recommendation_container--top--block--box--text {
   letter-spacing: 1%;
   color: #E0E0E0;
   width: 407px;
-  text-align: left;
   margin-bottom: 32px;
 }
 main .recommendation_container--top--block--box--btn {
@@ -489,14 +517,14 @@ main .recommendation_container--bottom--block {
   margin: 0 auto;
   display: flex;
   align-items: center;
-  gap: 180px;
+  justify-content: space-between;
   width: 100%;
-  max-width: 1240px;
-  padding-left: 71px;
+  max-width: 1260px;
 }
 main .recommendation_container--bottom--block--img {
   width: 100%;
   height: auto;
+  max-width: 630px;
 }
 main .recommendation_container--bottom--block--box {
   width: 100%;
@@ -520,7 +548,6 @@ main .recommendation_container--bottom--block--box--text {
   letter-spacing: 1%;
   color: #E0E0E0;
   width: 407px;
-  text-align: left;
   margin-bottom: 32px;
 }
 main .recommendation_container--bottom--block--box--btn {
@@ -852,4 +879,71 @@ main .videos_container--bottom--box--info--text2 {
   color: #FFFFFF;
   opacity: 70%;
   width: 320px;
+}
+main .gallery {
+  width: 100%;
+  max-width: 1920px;
+  padding-top: 177px;
+  padding-bottom: 229px;
+}
+main .gallery_container {
+  width: 1170px;
+  margin: 0 auto;
+}
+main .gallery_container--title {
+  font-family: DM Sans;
+  font-weight: 700;
+  font-size: 60px;
+  line-height: 150%;
+  letter-spacing: 0%;
+  text-align: center;
+  vertical-align: middle;
+  color: #010A20;
+}
+main .gallery_container--text {
+  font-family: DM Sans;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 28px;
+  letter-spacing: 1%;
+  text-align: center;
+  color: #6F7787;
+  width: 511px;
+  margin: 0 auto;
+  margin-top: 41px;
+  margin-bottom: 71px;
+}
+main .gallery_container--box {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  gap: 8px;
+  width: 1170px;
+  margin: 0 auto;
+}
+main .gallery_container--box--img--1 {
+  grid-row: span 3/span 3;
+}
+main .gallery_container--box--img--2 {
+  grid-column-start: 1;
+  grid-row-start: 4;
+}
+main .gallery_container--box--img--2 {
+  grid-column-start: 2;
+  grid-row-start: 1;
+}
+main .gallery_container--box--img--3 {
+  grid-row: span 3/span 3;
+  grid-column-start: 2;
+  grid-row-start: 2;
+}
+main .gallery_container--box--img--4 {
+  grid-row: span 2/span 2;
+  grid-column-start: 3;
+  grid-row-start: 1;
+}
+main .gallery_container--box--img--5 {
+  grid-row: span 2/span 2;
+  grid-column-start: 3;
+  grid-row-start: 3;
 }/*# sourceMappingURL=style.css.map */
