--- a/_main.scss
+++ b/_main.scss
@@ -647,7 +647,6 @@ main {
             &--block {
                 display: flex;
                 justify-content: space-between;
-                align-items: baseline;
 
                 &--numbers {
                     display: flex;
@@ -657,13 +656,13 @@ main {
                     &--line1 {
                         width: 3px;
                         height: 220px;
-                        background-color: #15143966;
+                        background: #15143966;
                     }
 
                     &--line2 {
                         width: 3px;
                         height: 495px;
-                        background-color: #15143966;
+                        background: #15143966;
                     }
                 }
 
@@ -731,7 +730,17 @@ main {
                         &--travel {
                             display: flex;
                             justify-content: space-between;
-                            align-items: center;
+                            width: 750px;
+
+                            &--img {
+                                position: relative;
+
+                                svg {
+                                    position: absolute;
+                                    top: 70px;
+                                    left: 125px;
+                                }
+                            }
 
                             &--info {
                                 &--title {
@@ -741,6 +750,7 @@ main {
                                     line-height: 41.08px;
                                     letter-spacing: 0px;
                                     color: #010A20;
+                                    margin-bottom: 12px;
                                 }
 
                                 &--text {
@@ -751,6 +761,7 @@ main {
                                     letter-spacing: 0px;
                                     color: #6F7787;
                                     margin-bottom: 88px;
+                                    width: 446px;
                                 }
                             }
                         }
