--- a/style.css
+++ b/style.css
@@ -1003,12 +1003,12 @@ main .gallery_container--text {
   margin-bottom: 71px;
 }
 main .gallery_container--box {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(4, 1fr);
-  gap: 8px;
   width: 1170px;
   margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(4, 220px);
+  gap: 8px;
 }
 main .gallery_container--box--img--1 {
   grid-row: span 3/span 3;
@@ -1017,21 +1017,21 @@ main .gallery_container--box--img--2 {
   grid-column-start: 1;
   grid-row-start: 4;
 }
-main .gallery_container--box--img--2 {
+main .gallery_container--box--img--3 {
   grid-column-start: 2;
   grid-row-start: 1;
 }
-main .gallery_container--box--img--3 {
+main .gallery_container--box--img--4 {
   grid-row: span 3/span 3;
   grid-column-start: 2;
   grid-row-start: 2;
 }
-main .gallery_container--box--img--4 {
+main .gallery_container--box--img--5 {
   grid-row: span 2/span 2;
   grid-column-start: 3;
   grid-row-start: 1;
 }
-main .gallery_container--box--img--5 {
+main .gallery_container--box--img--6 {
   grid-row: span 2/span 2;
   grid-column-start: 3;
   grid-row-start: 3;
