--- a/_main.scss
+++ b/_main.scss
@@ -578,188 +578,196 @@ main {
             }
 
             &--box {
-                display: grid;
-                grid-template-columns: repeat(3, 1fr);
-                grid-template-rows: repeat(4, 1fr);
-                gap: 8px;
                 width: 1170px;
                 margin: 0 auto;
 
+                display: grid;
+                grid-template-columns: repeat(3, 1fr);
+                grid-auto-rows: 200px;
+                grid-auto-rows: 180px;
+                gap: 8px;
+
+                div {
+                    border-radius: 12px;
+                    overflow: hidden;
+
+                    img {
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                        display: block;
+                        
+                    }
+                }
+
                 &--img {
                     &--1 {
-                        grid-row: span 3 / span 3;
+                        grid-row: span 3;
                     }
 
                     &--2 {
-                        grid-column-start: 1;
-                        grid-row-start: 4;
-                    }
-
-                    &--2 {
-                        grid-column-start: 2;
-                        grid-row-start: 1;
+                        grid-row: span 1;
                     }
 
                     &--3 {
-                        grid-row: span 3 / span 3;
-                        grid-column-start: 2;
-                        grid-row-start: 2;
+                        grid-row: span 2;
                     }
 
                     &--4 {
-                        grid-row: span 2 / span 2;
-                        grid-column-start: 3;
-                        grid-row-start: 1;
+                        grid-row: span 3;
                     }
 
                     &--5 {
-                        grid-row: span 2 / span 2;
-                        grid-column-start: 3;
-                        grid-row-start: 3;
+                        grid-row: span 2;
+                    }
+
+                    &--6 {
+                        grid-row: span 1;
                     }
                 }
             }
+
         }
-    }
 
-    .tutorial {
-        width: 100%;
-        max-width: 1920px;
-        background-color: #DCE8F2;
-        padding: 120px 0;
+        .tutorial {
+            width: 100%;
+            max-width: 1920px;
+            background-color: #DCE8F2;
+            padding: 120px 0;
 
-        &_container {
-            margin: 0 auto;
-            width: 1162px;
+            &_container {
+                margin: 0 auto;
+                width: 1162px;
 
-            &--title {
-                font-family: DM Sans;
-                font-weight: 700;
-                font-size: 60px;
-                line-height: 150%;
-                letter-spacing: 0%;
-                color: #010A20;
-                margin-bottom: 45px;
-            }
-
-            &--block {
-                display: flex;
-                justify-content: space-between;
-
-                &--numbers {
-                    display: flex;
-                    flex-direction: column;
-                    align-items: center;
-
-                    &--line1 {
-                        width: 3px;
-                        height: 220px;
-                        background: #15143966;
-                    }
-
-                    &--line2 {
-                        width: 3px;
-                        height: 495px;
-                        background: #15143966;
-                    }
+                &--title {
+                    font-family: DM Sans;
+                    font-weight: 700;
+                    font-size: 60px;
+                    line-height: 150%;
+                    letter-spacing: 0%;
+                    color: #010A20;
+                    margin-bottom: 45px;
                 }
 
-                &--steps {
-                    &--box {
-                        width: 1038px;
+                &--block {
+                    display: flex;
+                    justify-content: space-between;
 
-                        &--btn {
-                            font-family: DM Sans;
-                            font-weight: 700;
-                            font-size: 18px;
-                            line-height: 150%;
-                            letter-spacing: 0%;
-                            text-align: center;
-                            color: #FFFFFF;
-                            cursor: pointer;
-                            background-color: #DD2242;
-                            padding: 18px 56px;
-                            border-radius: 122px;
-                            border: none;
+                    &--numbers {
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
+
+                        &--line1 {
+                            width: 3px;
+                            height: 220px;
+                            background: #15143966;
                         }
 
-                        &--title {
-                            font-family: DM Sans;
-                            font-weight: 700;
-                            font-size: 26.41px;
-                            line-height: 41.08px;
-                            letter-spacing: 0px;
-                            color: #010A20;
-                            margin-bottom: 28px;
+                        &--line2 {
+                            width: 3px;
+                            height: 495px;
+                            background: #15143966;
                         }
+                    }
 
-                        &--text {
-                            &--1 {
-                                margin-bottom: 80px;
+                    &--steps {
+                        &--box {
+                            width: 1038px;
+
+                            &--btn {
                                 font-family: DM Sans;
-                                font-weight: 400;
-                                font-size: 23.47px;
-                                line-height: 38.15px;
-                                letter-spacing: 0px;
-                                color: #6F7787;
+                                font-weight: 700;
+                                font-size: 18px;
+                                line-height: 150%;
+                                letter-spacing: 0%;
+                                text-align: center;
+                                color: #FFFFFF;
+                                cursor: pointer;
+                                background-color: #DD2242;
+                                padding: 18px 56px;
+                                border-radius: 122px;
+                                border: none;
                             }
 
-                            &--2 {
-                                margin-bottom: 94px;
+                            &--title {
                                 font-family: DM Sans;
-                                font-weight: 400;
-                                font-size: 23.47px;
-                                line-height: 38.15px;
+                                font-weight: 700;
+                                font-size: 26.41px;
+                                line-height: 41.08px;
                                 letter-spacing: 0px;
-                                color: #6F7787;
+                                color: #010A20;
+                                margin-bottom: 28px;
                             }
 
-                            &--3 {
-                                margin-bottom: 17px;
-                                font-family: DM Sans;
-                                font-weight: 400;
-                                font-size: 23.47px;
-                                line-height: 38.15px;
-                                letter-spacing: 0px;
-                                color: #6F7787;
-                            }
-                        }
-
-                        &--travel {
-                            display: flex;
-                            justify-content: space-between;
-                            width: 750px;
-
-                            &--img {
-                                position: relative;
-
-                                svg {
-                                    position: absolute;
-                                    top: 70px;
-                                    left: 125px;
-                                }
-                            }
-
-                            &--info {
-                                &--title {
-                                    font-family: DM Sans;
-                                    font-weight: 700;
-                                    font-size: 26.41px;
-                                    line-height: 41.08px;
-                                    letter-spacing: 0px;
-                                    color: #010A20;
-                                    margin-bottom: 12px;
-                                }
-
-                                &--text {
+                            &--text {
+                                &--1 {
+                                    margin-bottom: 80px;
                                     font-family: DM Sans;
                                     font-weight: 400;
                                     font-size: 23.47px;
                                     line-height: 38.15px;
                                     letter-spacing: 0px;
                                     color: #6F7787;
-                                    margin-bottom: 88px;
-                                    width: 446px;
+                                }
+
+                                &--2 {
+                                    margin-bottom: 94px;
+                                    font-family: DM Sans;
+                                    font-weight: 400;
+                                    font-size: 23.47px;
+                                    line-height: 38.15px;
+                                    letter-spacing: 0px;
+                                    color: #6F7787;
+                                }
+
+                                &--3 {
+                                    margin-bottom: 17px;
+                                    font-family: DM Sans;
+                                    font-weight: 400;
+                                    font-size: 23.47px;
+                                    line-height: 38.15px;
+                                    letter-spacing: 0px;
+                                    color: #6F7787;
+                                }
+                            }
+
+                            &--travel {
+                                display: flex;
+                                justify-content: space-between;
+                                width: 750px;
+
+                                &--img {
+                                    position: relative;
+
+                                    svg {
+                                        position: absolute;
+                                        top: 70px;
+                                        left: 125px;
+                                    }
+                                }
+
+                                &--info {
+                                    &--title {
+                                        font-family: DM Sans;
+                                        font-weight: 700;
+                                        font-size: 26.41px;
+                                        line-height: 41.08px;
+                                        letter-spacing: 0px;
+                                        color: #010A20;
+                                        margin-bottom: 12px;
+                                    }
+
+                                    &--text {
+                                        font-family: DM Sans;
+                                        font-weight: 400;
+                                        font-size: 23.47px;
+                                        line-height: 38.15px;
+                                        letter-spacing: 0px;
+                                        color: #6F7787;
+                                        margin-bottom: 88px;
+                                        width: 446px;
+                                    }
                                 }
                             }
                         }
@@ -768,4 +776,3 @@ main {
             }
         }
     }
-}
